tests/positive/BuiltinsMultiImport/Input.mjuvix
module Input;

import A;
import Nat;

end;
