tests/negative/AmbiguousModule.mjuvix
module AmbiguousModule;
  module M;
    module M;
    end;
  end;

  open M;
  open M;
end;
